Install SASS loader

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://nodefactoryio.github.io/split-payment-web",
   "dependencies": {
+    "bulma": "^0.7.5",
     "ethers": "^4.0.36",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
