--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://nodefactoryio.github.io/split-payment-web",
   "dependencies": {
+    "3box": "^1.10.7",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "ethereum-blockies": "^0.1.1",
