--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://nodefactoryio.github.io/split-payment-web",
   "dependencies": {
+    "3box": "^1.10.7",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "bulma": "^0.7.5",
-    "3box": "^1.10.7",
     "ethereum-blockies": "^0.1.1",
     "ethers": "^4.0.36",
     "gh-pages": "^2.1.1",
@@ -18,7 +18,9 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "rimble-ui": "^0.9.7",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
