--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "3box": "^1.10.7",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@nodefactory/split-payment-sdk": "^1.0.4",
     "bulma": "^0.7.5",
     "ethereum-blockies": "^0.1.1",
     "ethers": "^4.0.36",
